updated For Final

--- a/Assets/Css/main.css
+++ b/Assets/Css/main.css
@@ -4,7 +4,7 @@
 	--btn-line-size: 1px;
 	--button-radius: 10px;
 	--dis-color: #4b4a4a;
-	--fill-color: rgba(159, 224, 182, 0.223);
+	--fill-color: rgba(159,224,182,0.223);
 	--font_heading-font-family: Poppins;
 	--font_heading-font-weight: 700;
 	--h1_desktop-font-size: 28px;
@@ -28,8 +28,8 @@
 	--header-background-color: #ffffff;
 	--image_radius: 10;
 	--light-line-color-rgba: #818181;
-	--link-text-color: rgb(32, 83, 201);
-	--primary-color: rgba(21, 0, 255, 0.729);
+	--link-text-color: rgb(32,83,201);
+	--primary-color: rgba(21,0,255,0.729);
 	--primary-text-color: #ffffff;
 	--primary-text: #000000;
 	--primary_text-font-family: Poppins;
@@ -93,8 +93,8 @@ video {
 #main-header .site-main {
 	display: block;
 	margin-top: 0px;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-
+	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
+	padding: 0px 150px;
 }
 
 #sidebar {
@@ -120,8 +120,43 @@ video {
 	margin: 20px 5px !important;
 }
 
-.author-avatar img,
-.h-1-footer .author-avatar img {
+#sticky-box-0 {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0px;
+}
+
+.elementor-element-edit-mode #sticky-box-50{
+	top: 0;
+}
+
+.elementor-element-edit-mode #sticky-box-100{
+	top: 0;
+}
+
+.elementor-element-edit-mode #sticky-box-150{
+	top: 0;
+}
+
+#sticky-box-50 {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 50px;
+}
+
+#sticky-box-100 {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 100px;
+}
+
+#sticky-box-150 {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 150px;
+}
+
+.author-avatar img, .h-1-footer .author-avatar img {
 	border-radius: 50px;
 	border: dotted 1px var(--primary-color);
 	height: 50px;
@@ -141,8 +176,7 @@ video {
 	font-size: 12px;
 }
 
-.close-icon,
-.menu-icon {
+.close-icon, .menu-icon {
 	cursor: pointer;
 }
 
@@ -182,7 +216,7 @@ video {
 	background-color: var(--primary-color);
 	border-radius: 20px 0 0 0;
 	bottom: 0;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
 	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 24 24'%3E%3Cpath fill='white' d='M18.512 10.077c0 .739-.625 1.338-1.396 1.338c-.77 0-1.395-.6-1.395-1.338c0-.739.625-1.337 1.395-1.337s1.396.598 1.396 1.337'/%3E%3Cpath fill='white' fill-rule='evenodd' d='M18.036 5.532c-1.06-.136-2.414-.136-4.123-.136h-3.826c-1.71 0-3.064 0-4.123.136c-1.09.141-1.974.437-2.67 1.104c-.696.668-1.005 1.514-1.152 2.56C2 10.21 2 11.508 2 13.147v.1c0 1.639 0 2.937.142 3.953c.147 1.045.456 1.891 1.152 2.558c.696.668 1.58.964 2.67 1.104C7.024 21 8.378 21 10.087 21h3.826c1.71 0 3.064 0 4.123-.137c1.09-.14 1.974-.436 2.67-1.104c.696-.667 1.005-1.513 1.152-2.558c.142-1.016.142-2.314.142-3.953v-.1c0-1.64 0-2.937-.142-3.953c-.147-1.045-.456-1.891-1.152-2.559c-.696-.667-1.58-.963-2.67-1.104M6.15 6.858c-.936.12-1.475.347-1.87.724c-.393.378-.629.894-.755 1.791c-.1.72-.123 1.62-.128 2.796l.47-.395c1.125-.943 2.819-.889 3.875.123l3.99 3.825a1.2 1.2 0 0 0 1.491.124l.278-.187a3.606 3.606 0 0 1 4.34.25l2.407 2.078c.098-.264.173-.58.227-.965c.128-.916.13-2.124.13-3.824c0-1.7-.002-2.908-.13-3.825c-.126-.897-.362-1.413-.756-1.79c-.393-.378-.933-.604-1.869-.725c-.956-.123-2.216-.125-3.99-.125h-3.72c-1.774 0-3.034.002-3.99.125' clip-rule='evenodd'/%3E%3Cpath fill='white' d='M17.086 2.61c-.86-.11-1.954-.11-3.319-.11h-3.09c-1.364 0-2.459 0-3.319.11c-.89.115-1.632.358-2.221.92a2.9 2.9 0 0 0-.724 1.12c.504-.23 1.074-.366 1.714-.45c1.084-.14 2.47-.14 4.22-.14h3.914c1.75 0 3.135 0 4.22.14c.558.073 1.064.186 1.519.366a2.875 2.875 0 0 0-.692-1.035c-.589-.563-1.331-.806-2.222-.92'/%3E%3C/svg%3E");
 	display: flex;
 	height: 50px;
@@ -198,7 +232,7 @@ video {
 	background-color: var(--primary-color);
 	border-radius: 20px 0 0 0;
 	bottom: 0;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
 	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 24 24'%3E%3Cpath fill='white' d='m10 15l5.19-3L10 9zm11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73'/%3E%3C/svg%3E");
 	display: flex;
 	height: 50px;
@@ -220,7 +254,7 @@ video {
 .h-1-box {
 	background-color: var(--box-color);
 	border-radius: 10px;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -283,8 +317,7 @@ video {
 	height: 40px;
 }
 
-.logo-text,
-.logo-text a {
+.logo-text, .logo-text a {
 	color: var(--primary-text);
 	margin: 0;
 	padding: 0;
@@ -326,7 +359,7 @@ video {
 .nav-main-menu .sub-menu {
 	background-color: var(--header-background-color);
 	border-radius: 2px;
-	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	box-shadow: rgba(149,157,165,0.2) 0px 8px 24px;
 	display: none;
 	left: 0;
 	list-style: none;
@@ -422,7 +455,7 @@ video {
 }
 
 .nine-menu-mobile .nav-main-menu .sub-menu {
-	box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px;
+	box-shadow: rgba(255,255,255,0.2) 0px 0px 0px;
 	padding-top: 5px;
 	width: 100%;
 }
@@ -437,7 +470,6 @@ video {
 	opacity: 1;
 	transform: translateX(0);
 }
-
 
 .pagination {
 	margin-top: 20px;
@@ -480,7 +512,7 @@ video {
 	background: #fff;
 	border-radius: 8px;
 	border: 1px solid #ddd;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -546,7 +578,7 @@ video {
 .post-grid-container {
 	display: grid;
 	gap: 20px;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
 }
 
 .post-grid-container .post-date {
@@ -588,15 +620,6 @@ video {
 	padding: 2px 10px;
 }
 
-@media (max-width: 800px) {
-	.post-tags li {
-
-		margin-top: 0px;
-
-
-	}
-}
-
 .post-tags::before {
 	content: "\23";
 	font-family: 'Font Awesome 6 Solid';
@@ -614,8 +637,7 @@ video {
 	width: 100%;
 }
 
-.blog-post-one,
-.blog-post-two {
+.blog-post-one, .blog-post-two {
 	display: flex;
 	gap: 20px;
 }
@@ -680,15 +702,13 @@ video {
 	text-align: start;
 }
 
-.s-p-nav-next a,
-.s-p-nav-previous a {
+.s-p-nav-next a, .s-p-nav-previous a {
 	align-items: center;
 	display: flex;
 	justify-content: center;
 }
 
-.s-p-nav-next,
-.s-p-nav-previous {
+.s-p-nav-next, .s-p-nav-previous {
 	align-items: center;
 	display: flex;
 	width: 48%;
@@ -727,7 +747,7 @@ video {
 	background-color: var(--primary-color);
 	border-radius: 20px;
 	border: none;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	color: var(--primary-text-color);
 	cursor: pointer;
 	padding: 10px 20px;
@@ -744,7 +764,7 @@ video {
 .search-box input[type="search"] {
 	border-radius: 20px;
 	border: none;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	padding: 10px;
 	width: 300px;
 }
@@ -765,7 +785,7 @@ video {
 }
 
 .site-main {
-	margin: 10px 150px;
+	padding: 10px 150px;
 }
 
 .site-main .h-1 {
@@ -778,7 +798,7 @@ video {
 	align-items: center;
 	background-color: var(--primary-color);
 	border-radius: 0 0 0 20px;
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+	box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 1px 3px 1px;
 	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M59.1 236.3h393.8s-19.7-98.5-98.5-98.5V59.1L413.5 0h-315l59.1 59.1v78.8c-78.8-.1-98.5 98.4-98.5 98.4M256 512l39.4-256h-78.8z'/%3E%3C/svg%3E");
 	display: flex;
 	height: 50px;
@@ -833,15 +853,12 @@ video {
 	transition: background-size .3s;
 }
 
-
-
 .title a:hover {
 	background-size: 100% 100%;
 	color: currentColor;
 }
 
-.title,
-.title a {
+.title, .title a {
 	background-image: linear-gradient(transparent calc(100% - 1px), currentColor 1px);
 	background-repeat: no-repeat;
 	background-size: 0 100%;
@@ -866,6 +883,27 @@ video {
 	margin: 0;
 }
 
+.nine-page .single-post-nav {
+	display: none;
+}
+
+.error-404 {
+	width: 100%;
+	margin: 200px 00px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	gap: 40px;
+}
+
+@media (max-width: 800px) {
+	.post-tags li {
+		margin-top: 0px;
+	}
+}
+
 @media (max-width: 1000px) {
 	.box-cont-nine {
 		display: flex;
@@ -875,9 +913,7 @@ video {
 }
 
 @media (max-width: 1300px) {
-
-	.blog-post-one,
-	.blog-post-two {
+	.blog-post-one, .blog-post-two {
 		flex-direction: column;
 		width: 100%;
 	}
@@ -940,14 +976,12 @@ video {
 		padding: 0px;
 	}
 
-
 	.site-main .h-1 {
 		flex-direction: column;
 		gap: 5px;
 	}
 
-	.title,
-	.title a {
+	.title, .title a {
 		font-size: 18px;
 	}
 
@@ -960,23 +994,7 @@ video {
 	.search input[type="search"] {
 		border-radius: 20px;
 		border: none;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 0 10px rgba(0,0,0,0.1);
 		width: 250px;
 	}
-}
-
-.nine-page .single-post-nav {
-	display: none;
-}
-
-.error-404 {
-	width: 100%;
-	margin: 200px 00px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	gap: 40px;
-
 }
